--- a/mycss.css
+++ b/mycss.css
@@ -3,14 +3,14 @@
     margin-bottom: 8px;
     font-weight: bold;
     font-size: 90%;
-    }
-  .my-legend .legend-scale ul {
+}
+.my-legend .legend-scale ul {
     margin: 0;
     padding: 0;
     float: left;
     list-style: none;
-    }
-  .my-legend .legend-scale ul li {
+}
+.my-legend .legend-scale ul li {
     display: block;
     float: left;
     width: 100px;
@@ -18,18 +18,43 @@
     text-align: center;
     font-size: 80%;
     list-style: none;
-    }
-  .my-legend ul.legend-labels li span {
+}
+.my-legend ul.legend-labels li span {
     display: block;
     float: left;
     height: 15px;
     width: 100px;
-    }
-  .my-legend .legend-source {
+}
+.my-legend .legend-source {
     font-size: 70%;
     color: #999;
     clear: both;
-    }
-  .my-legend a {
+}
+.my-legend a {
     color: #777;
-    }
+}
+
+/*county font*/
+
+.county-label {
+    font-size: 15px;
+    font-weight: lighter;
+    font-family: Helvetica, sans-serif;
+}
+
+div.tooltip {   
+    position: absolute;
+    max-width: 200px;
+    height: auto;
+    padding: 5px;
+    background-color: white;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    pointer-events: none; /* MUI IMPORTANTE! */
+    font-family: sans-serif;
+    font-size:12px;
+            }
