--- a/mycss.css
+++ b/mycss.css
@@ -1,3 +1,26 @@
+.heading {
+    text-align: center;
+    font-size: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.county-container {
+    float: right;
+    position: relative;
+
+}
+
+.county-container h2 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.my-legend {
+    float: right;
+    display: block;
+    width: 400px;
+    position: relative;
+    bottom: 0px;
+}
 .my-legend .legend-title {
     text-align: left;
     margin-bottom: 8px;
@@ -56,5 +79,9 @@ div.tooltip {
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
     pointer-events: none; /* MUI IMPORTANTE! */
     font-family: sans-serif;
-    font-size:12px;
-            }
+    font-size:18px;
+   }
+
+
+
+
