--- a/mycss.css
+++ b/mycss.css
@@ -2,6 +2,17 @@ body {
 
 }
 
+.charts-container h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+.charts-container h3 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+    font-weight: lighter;
+}
 .heading {
     text-align: center;
     font-size: 50px;
@@ -105,7 +116,11 @@ font-style: italic;
 .my-legend a {
     color: #777;
 }
+/*hightlight for bar chart*/
 
+.hightlight {
+    fill: #d87093;
+}
 /*county font*/
 
 .county-label {
