--- a/src/styles/mycss.css
+++ b/src/styles/mycss.css
@@ -218,7 +218,7 @@ footer p{
     text-align: center;
 }
 
-.fab, .fas {
+.fab, .fas, .far {
     color: rgb(1, 63, 19);
     padding: 4px 4px 4px 4px;
     margin: 5px 5px;
