--- a/src/styles/mycss.css
+++ b/src/styles/mycss.css
@@ -7,6 +7,20 @@
 hr {
     border-top: 10px solid;
 }
+
+.heading-bar {
+    display: flex;
+    justify-content: space-around;
+    width: 90%;
+    padding-left: 90px;
+}
+
+.heading-bar li {
+    list-style: none;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
 .nav-links {
     display: flex;
     justify-content: space-around;
@@ -14,6 +28,33 @@ hr {
     border-bottom: 1px solid rgb(206, 205, 205);
     width: 100%;
 
+}
+
+li span {
+    font-weight: bold;
+}
+#link-heading {
+    text-decoration: none;
+    color: dimgray;
+}
+
+#last-heading {
+    width: 250px;
+    text-align: justify;
+    /* border: 2px solid; */
+    padding: 10px;
+    margin-top: 10px;
+
+}
+
+#first-heading {
+    width: 200px;
+    border: 2px solid;
+    padding: 10px;
+    text-align: center;
+    height: fit-content;
+    font-weight: bold;
+    margin-top: 20px;
 }
 
 .nav-links li {
@@ -32,12 +73,12 @@ hr {
     /* justify-content: center; */
 }
 .header-title {
-
-    /* font-family: Georgia, 'Times New Roman', Times, serif; */
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .title {
     text-align: center;
     font-size: 58px;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 .charts-container h1 {
@@ -62,7 +103,7 @@ hr {
 .heading {
     text-align: center;
     font-size: 50px;
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
 }
 
 .content{
